--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.css">
+
     <title>LP Terapeutas</title>
 </head>
 
@@ -45,6 +49,12 @@
 
     <section id="main-banner">
         <div class="banner-container">
+
+            <div class="main-container">
+                <h1>Excelência em Psicoterapia</h1>
+                <span>Hipnoterapia, Psicologia, Psicanálise e Neurociência</span>
+                <button class="main-button">Quero assumir o controle da minha vida</button>
+            </div>
 
         </div>
 
