--- a/index.html
+++ b/index.html
@@ -61,6 +61,81 @@
     </section>
 
 
+    <section id="sobre-lp">
+        <div class="about-lp-text">
+
+            <h1>Por que escolher a LP?</h1>
+            <h4>Acreditamos que o TEMPO é um dos bens mais valiosos do ser humano!</h4>
+            <p>Se você está em busca de uma terapia focada em resultados, individualizada para suas necessidades, este é
+                o método mais adequado para você.
+                <br />
+                <br />
+                Nós da LP Terapeutas temos como nosso principal objetivo, auxiliar você a atingir os melhores e mais
+                seguros
+                resultados, de forma rápida e eficiente, sem pretender você a anos de terapia e sessões que poderão não
+                te
+                levar a lugar algum.
+            </p>
+        </div>
+
+        <div class="about-lp-btn">
+            <button class="button">
+                Agendar minha consulta
+            </button>
+        </div>
+
+    </section>
+
+    <section id="terapias">
+        <div class="terapias-text">
+            <h1>O que pode ser tratado na terapia</h1>
+
+            <p>Você sente que algo não está como deseja dentro de você, sente-se “preso(a)” aos seus sentimentos, vive
+                em um ciclo negativo de comportamentos que não te permitem alcançar seus objetivos?</p> <br />
+            <p>Esta é a sua oportunidade de assumir o controle de sua vida e modificar seus padrões de pensamentos e
+                comportamentos em busca de novos resultados.</p><br />
+            <p>Sim, é possível superar qualquer problema que esteja atrapalhando a sua vida e te impedindo de viver o
+                seu real potencial!!
+                Por uma vida mais saudável e leve, livre-se:</p>
+        </div>
+        <div class="slideshow-container">
+            <div class="mySlides fade">
+                <img src="./assets/CARD DEPRESSÃO.png" style="width:80%">
+                <div class="text">Depressão</div>
+            </div>
+
+            <div class="mySlides fade">
+
+                <img src="./assets/CARD VÍCIOS.png" style="width:80%">
+                <div class="text">Vicios</div>
+            </div>
+
+            <div class="mySlides fade">
+                <img src="./assets/CARD COMPULSÕES.png" style="width:80%">
+                <div class="text">Compulsões</div>
+            </div>
+
+            <div class="mySlides fade">
+                <img src="./assets/CARD SÍNDROME DO PÂNICO.png" style="width:80%">
+                <div class="text">Sindrome do Pânico</div>
+            </div>
+
+            <div class="mySlides fade">
+                <img src="./assets/CARD ANSIEDADE.png.png" style="width:80%">
+                <div class="text">Ansiedade/div>
+                </div>
+
+                <!-- Next and previous buttons -->
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            </div>
+            <br>
+        </div>
+    </section>
+
+
 </body>
+
+<script src="./script/script.js"></script>
 
 </html>
