--- a/index.html
+++ b/index.html
@@ -98,44 +98,38 @@
                 seu real potencial!!
                 Por uma vida mais saudável e leve, livre-se:</p>
         </div>
-        <div class="slideshow-container">
-            <div class="mySlides fade">
-                <img src="./assets/CARD DEPRESSÃO.png" style="width:80%">
-                <div class="text">Depressão</div>
-            </div>
-
-            <div class="mySlides fade">
-
-                <img src="./assets/CARD VÍCIOS.png" style="width:80%">
-                <div class="text">Vicios</div>
-            </div>
-
-            <div class="mySlides fade">
-                <img src="./assets/CARD COMPULSÕES.png" style="width:80%">
-                <div class="text">Compulsões</div>
-            </div>
-
-            <div class="mySlides fade">
-                <img src="./assets/CARD SÍNDROME DO PÂNICO.png" style="width:80%">
-                <div class="text">Sindrome do Pânico</div>
-            </div>
-
-            <div class="mySlides fade">
-                <img src="./assets/CARD ANSIEDADE.png.png" style="width:80%">
-                <div class="text">Ansiedade/div>
+        <div class="swiper">
+            <div class="swiper-wrapper">
+                <div class=" swiper-slide">
+                    <img src="./assets/CARD ANSIEDADE.png" alt="">
+                </div>
+                <div class=" swiper-slide">
+                    <img src="./assets/CARD BAIXA AUTOESTIMA.png" alt="">
+                </div>
+                <div class=" swiper-slide">
+                    <img src="./assets/CARD COMPULSÕES.png" alt="">
                 </div>
 
-                <!-- Next and previous buttons -->
-                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                <div class=" swiper-slide">
+                    <img src="./assets/CARD CULPA EXCESSIVA.png" alt="">
+                </div>
+                <div class=" swiper-slide">
+                    <img src="./assets/CARD DEPRESSÃO.png" alt="">
+                </div>
+                <div class=" swiper-slide">
+                    <img src="./assets/CARD DORES.png" alt="">
+                </div>
             </div>
-            <br>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-pagination"></div>
+        </div>
         </div>
     </section>
 
 
 </body>
-
+<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 <script src="./script/script.js"></script>
 
 </html>
