--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 seu real potencial!!
                 Por uma vida mais saudável e leve, livre-se:</p>
         </div>
-        <div class="swiper">
+        <div class="swiper-container">
             <div class="swiper-wrapper">
                 <div class=" swiper-slide">
                     <img src="./assets/CARD ANSIEDADE.png" alt="">
