--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     <section id="terapias">
         <div class="terapias-text">
-            <h1>O que pode ser tratado na terapia</h1>
+            <h1>O que pode ser tratado<br /> na terapia</h1>
 
             <p>Você sente que algo não está como deseja dentro de você, sente-se “preso(a)” aos seus sentimentos, vive
                 em um ciclo negativo de comportamentos que não te permitem alcançar seus objetivos?</p> <br />
@@ -101,30 +101,63 @@
         <div class="swiper-container">
             <div class="swiper-wrapper">
                 <div class=" swiper-slide">
-                    <img src="./assets/CARD ANSIEDADE.png" alt="">
+                    <img src="./assets/CARD ANSIEDADE.png" alt="ANSIEDADE">
+                    <span>ANSIEDADE</span>
                 </div>
                 <div class=" swiper-slide">
-                    <img src="./assets/CARD BAIXA AUTOESTIMA.png" alt="">
+                    <img src="./assets/CARD BAIXA AUTOESTIMA.png" alt="BAIXA AUTOESTIMA">
+                    <span>BAIXA AUTOESTIMA</span>
                 </div>
                 <div class=" swiper-slide">
-                    <img src="./assets/CARD COMPULSÕES.png" alt="">
+                    <img src="./assets/CARD COMPULSÕES.png" alt="COMPULSÕES">
+                    <span>COMPULSÕES</span>
+                </div>
+                <div class=" swiper-slide">
+                    <img src="./assets/CARD CULPA EXCESSIVA.png" alt="CULPA">
+                    <span>CULPA EXCESSIVA</span>
+                </div>
+                <div class=" swiper-slide">
+                    <img src="./assets/CARD DEPRESSÃO.png" alt="DEPRESSÃO">
+                    <span>DEPRESSÃO</span>
+                </div>
+                <div class=" swiper-slide">
+                    <img src="./assets/CARD DORES.png" alt="DORES">
+                    <span>DORES</span>
+                </div>
+                <div class=" swiper-slide">
+                    <img src="./assets/CARD HÁBITOS DESTRUTIVOS.png" alt="HÁBITOS DESTRUTIVOS">
+                    <span>HÁBITOS DESTRUTIVOS</span>
+                </div>
+                <div class=" swiper-slide">
+                    <img src="./assets/CARD INSEGURANÇA.png" alt="INSEGURANÇA">
+                    <span>INSEGURANÇA</span>
+                </div>
+                <div class=" swiper-slide">
+                    <img src="./assets/CARD PENSAMENTOS OBSESSIVOS.png" alt="PENSAMENTOS OBSESSIVOS">
+                    <span>PENSAMENTOS OBSESSIVOS</span>
+                </div>
+                <div class=" swiper-slide">
+                    <img src="./assets/CARD PROCRASTINAÇÃO.png" alt="PROCRASTINAÇÃO">
+                    <span>PROCRASTINAÇÃO</span>
+                </div>
+                <div class=" swiper-slide">
+                    <img src="./assets/CARD SÍNDROME DO PÂNICO.png" alt="SÍNDROME DO PÂNICO">
+                    <span>SÍNDROME DO PÂNICO</span>
+                </div>
+                <div class=" swiper-slide">
+                    <img src="./assets/CARD VÍCIOS.png" alt="VÍCIOS">
+                    <span>VÍCIOS</span>
                 </div>
 
-                <div class=" swiper-slide">
-                    <img src="./assets/CARD CULPA EXCESSIVA.png" alt="">
-                </div>
-                <div class=" swiper-slide">
-                    <img src="./assets/CARD DEPRESSÃO.png" alt="">
-                </div>
-                <div class=" swiper-slide">
-                    <img src="./assets/CARD DORES.png" alt="">
-                </div>
+
             </div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-            <div class="swiper-pagination"></div>
+
+        </div>
+        <div class="arrow swiper-button-next">
+            <img class="arrow-slide" src="./assets/SETA.png" alt="seta">
         </div>
         </div>
+
     </section>
 
 
