--- a/index.html
+++ b/index.html
@@ -20,25 +20,28 @@
             <div><a href="#"><img class="logo" src="./assets/LOGO.png" alt="Logo LP terapeutas" srcset=""></a></div>
             <nav>
                 <ul class="nav-container">
-                    <li class="nav-item"><a href="http://">Home</a></li>
-                    <li class="nav-item"><a href="http://">Agendar Terapia</a></li>
-                    <li class="nav-item"><a href="http://">Tratamentos</a></li>
-                    <li class="nav-item"><a href="http://">Depoimentos</a></li>
-                    <li class="nav-item"><a href="http://">Quem somos</a></li>
-                    <li class="nav-item"><a href="http://">Blog</a></li>
-                    <li class="nav-item"><a href="http://">Contatos</a></li>
+                    <li class="nav-item"><a href="#">Home</a></li>
+                    <li class="nav-item"><a
+                            href="https://api.whatsapp.com/send/?phone=5534998372915&text&type=phone_number&app_absent=0"
+                            target="_blank">Agendar
+                            Terapia</a></li>
+                    <li class="nav-item"><a href="#">Tratamentos</a></li>
+                    <li class="nav-item"><a href="#">Depoimentos</a></li>
+                    <li class="nav-item"><a href="#">Quem somos</a></li>
+                    <li class="nav-item"><a href="#">Blog</a></li>
+                    <li class="nav-item"><a href="#">Contatos</a></li>
                 </ul>
             </nav>
 
             <div>
                 <a href="">
-                    <img class="social" src="./assets/FACEBOOK.png" alt="" srcset="">
+                    <img class="social" src="./assets/FACEBOOK.png" alt="FACEBOOK" srcset="">
                 </a>
-                <a href="">
-                    <img class="social" src="./assets/INSTAGRAM.png" alt="" srcset="">
+                <a href="https://www.instagram.com/paulocantaru/" target="_blank">
+                    <img class="social" src="./assets/INSTAGRAM.png" alt="INSTAGRAM" srcset="">
                 </a>
-                <a href="">
-                    <img class="social" src="./assets/LINKEDIN.png" alt="" srcset="">
+                <a href="https://www.linkedin.com/in/paulocantarutti/?originalSubdomain=br" target="_blank">
+                    <img class="social" src="./assets/LINKEDIN.png" alt="LINKEDIN" srcset="">
                 </a>
             </div>
 
@@ -160,6 +163,29 @@
 
     </section>
 
+    <section id="etapas-consulta">
+
+        <div class="etapas-main">
+            <h1>Estapas da consulta</h1>
+            <p></p>
+            <a href="https://api.whatsapp.com/send/?phone=5534998372915&text&type=phone_number&app_absent=0"
+                target="_blank"><button> Agendar minha consulta</button></a>
+        </div>
+        <div class="etapas-quadros">
+            <div class="quadro">
+                <h1>1</h1>
+                <p>Primeira etapa da Terapia é a Consulta de Avaliação, que possui como objetivo entender a sua
+                    necessidade, tirar todas as dúvidas e definirmos o melhor tratamento.</p>
+            </div>
+            <div class="quadro">
+                <h1>2</h1>
+                <p>Em seguida, com o tratamento definido e todas as dúvidas esclarecidas, agendamos as datas e iniciamos
+                    as sessões.</p>
+            </div>
+        </div>
+
+
+    </section>
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
