--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             Terapia</a></li>
                     <li class="nav-item"><a href="#">Tratamentos</a></li>
                     <li class="nav-item"><a href="#">Depoimentos</a></li>
-                    <li class="nav-item"><a href="#">Quem somos</a></li>
+                    <li class="nav-item"><a href="./sobre.html">Quem somos</a></li>
                     <li class="nav-item"><a href="#">Blog</a></li>
                     <li class="nav-item"><a href="#">Contatos</a></li>
                 </ul>
