--- a/sobre.html
+++ b/sobre.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.css">
     <title>Sobre nós</title>
 </head>
@@ -52,19 +55,36 @@
 
         <section class="about-02">
             <div>
-                <!--
-                <h1>Lauriene</h1>
-                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. </h4>
-                <p>Provident harum est excepturi libero maxime, magni velit officiis hic dicta molestias ipsa, atque
-                    dolor accusamus ipsum maiores quo sapiente. Sed, numquam.Provident harum est excepturi libero
-                    maxime, magni velit officiis hic dicta molestias ipsa, atque dolor accusamus ipsum maiores quo
-                    sapiente. Sed, numquam.</p>
-                <p>Provident harum est excepturi libero maxime, magni velit officiis hic dicta molestias ipsa, atque
-                    dolor accusamus ipsum maiores quo sapiente. Sed, numquam.Provident harum est excepturi libero
-                    maxime, magni velit officiis hic dicta molestias ipsa, atque dolor accusamus ipsum maiores quo
-                    sapiente. Sed, numquam.Provident harum est excepturi libero maxime, magni velit officiis hic dicta
-                    molestias ipsa, atque dolor accusamus ipsum maiores quo sapiente. Sed, numquam.</p>
-                -->
+
+                <h1>Lauriene Reis</h1>
+                <p>Sempre fui muito sensível às coisas abstratas, como arte, livros, música, ao sofrimento das pessoas
+                    que me rodeavam e até aos meus próprios sofrimentos. Percebia que eu era diferente dos demais e na
+                    medida em que fui me conhecendo e crescendo, notei que aquela sensibilidade na verdade era um dom, o
+                    qual eu precisaria lapidar. Desta forma, ao longo da minha vida, procurei estudar, busquei o
+                    autoconhecimento e experiências que me levassem a me especializar naquilo que eu mais queria:
+                    transformar vidas e possibilitar às pessoas uma existência mais leve.</p>
+                <br />
+                <p>E a isto me dedico hoje, com muito orgulho. Tenho contato com muitas mazelas da alma do ser humano,
+                    angústias, aflições, incertezas que consomem e após atender muitas pessoas aprendi que não se pode
+                    desistir da vida, não se pode acostume com a dor... Pois mais tarde a conta chega e ela pode custar
+                    caro. Como diria José Saramago “A pior dor não é a que se sente no momento, mas a que se sente mais
+                    tarde quando não há nada que possa ser feito” então, enfrente seus medos, busque ajuda, a vida é uma
+                    só e você só tem o agora. Estarei à disposição para ajudá-lo, afinal, este é meu propósito de vida.
+                </p>
+                <br />
+                <p>
+                    ✔ Psicologia – Universidade Federal de São João del Rei
+                    <br />
+                    ✔ MBA em Desenvolvimento de Pessoas – Centro Universitário Internacional
+                    <br />
+                    ✔ Hipnoterapeuta - Instituto Kraisch
+                    <br />
+                    ✔ Especialista em Terapia Breve
+                    <br />
+                    ✔ Especialista em Terapia Fenomenológica-Existencial
+                    <br />
+                    ✔ Especialista em Terapia de Reintegração Implícita
+                </p>
             </div>
 
         </section>
