--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                             href="https://api.whatsapp.com/send/?phone=5534998372915&text&type=phone_number&app_absent=0"
                             target="_blank">Agendar
                             Terapia</a></li>
-                    <li class="nav-item"><a href="#">Tratamentos</a></li>
-                    <li class="nav-item"><a href="#">Depoimentos</a></li>
+                    <li class="nav-item"><a href="/#terapias">Tratamentos</a></li>
+                    <li class="nav-item"><a href="/#depoimentos">Depoimentos</a></li>
                     <li class="nav-item"><a href="./sobre.html">Quem somos</a></li>
                     <li class="nav-item"><a href="#">Blog</a></li>
                     <li class="nav-item"><a href="#">Contatos</a></li>
@@ -186,6 +186,72 @@
 
 
     </section>
+
+    <section id="testimonials" class="reveal">
+        <h1>Depoimentos</h1>
+        <div class="testimonials-container">
+            <div class="testimonials swiper-container">
+                <div class="swiper-wrapper-test">
+                    <div class="testimonial swiper-slide">
+                        <blockquote>
+                            <div>
+                                <video width="320" height="240" controls>
+                                    <source src="./assets/videos/ana.mp4" type="video/mp4">
+                                    Your browser does not support the video tag.
+                                </video>
+                            </div>
+                        </blockquote>
+                    </div>
+                    <div class="testimonial swiper-slide">
+                        <blockquote>
+                            <div>
+                                <video width="320" height="240" controls>
+                                    <source src="./assets/videos/carol.mp4" type="video/mp4">
+                                    Your browser does not support the video tag.
+                                </video>
+                            </div>
+
+                        </blockquote>
+                    </div>
+
+                </div>
+                <div class="swiper-pagination"></div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div>
+            <h1>Entre em contato: </h1>
+        </div>
+        <div class="footer-item">
+            <a href="https://api.whatsapp.com/send/?phone=5534998372915&text&type=phone_number&app_absent=0">
+                <img src="./assets/TELEFONE.png" alt="TELEFONE">
+            </a>
+            <span>
+                Whatsapp: (34)99837-2915
+            </span>
+            <span>
+                Horários: 8:00 - 20:00</span>
+        </div>
+        <div class="footer-item">
+            <a href="mailto:contato@lpterapeutas.com">
+                <img src="./assets/E-MAIL.png" alt="E-MAIL">
+            </a>
+            <span>
+                E-mail: contato@lpterapeutas.com
+            </span>
+        </div>
+        <div class="footer-item">
+            <span>Nossas Redes:</span>
+            <span class="footer-item-social">
+
+                <a href="https://www.instagram.com/paulocantaruttioficial" target="blank">Instagram
+                    Paulo</a>
+                <a href="https://www.instagram.com/lauriene.reis_psic" target="blank">Instagram Lauriene</a>
+            </span>
+        </div>
+    </footer>
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
