--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     </section>
 
     <footer>
-        <div>
+        <div class="footer-msg">
             <h1>Entre em contato: </h1>
         </div>
         <div class="footer-item">
@@ -244,12 +244,10 @@
         </div>
         <div class="footer-item">
             <span>Nossas Redes:</span>
-            <span class="footer-item-social">
 
-                <a href="https://www.instagram.com/paulocantaruttioficial" target="blank">Instagram
-                    Paulo</a>
-                <a href="https://www.instagram.com/lauriene.reis_psic" target="blank">Instagram Lauriene</a>
-            </span>
+            <a href="https://www.instagram.com/paulocantaruttioficial" target="blank">Instagram
+                Paulo</a>
+            <a href="https://www.instagram.com/lauriene.reis_psic" target="blank">Instagram Lauriene</a>
         </div>
     </footer>
 
