--- a/index.html
+++ b/index.html
@@ -14,7 +14,43 @@
 </head>
 
 <body>
+
     <header>
+        <nav class="toggle-nav">
+            <div class="menu">
+                <ul class="nav-container">
+                    <li class="nav-item"><a href="#">Home</a></li>
+                    <li class="nav-item"><a
+                            href="https://api.whatsapp.com/send/?phone=5534998372915&text&type=phone_number&app_absent=0"
+                            target="_blank">Agendar
+                            Terapia</a></li>
+                    <li class="nav-item"><a href="/#terapias">Tratamentos</a></li>
+                    <li class="nav-item"><a href="/#depoimentos">Depoimentos</a></li>
+                    <li class="nav-item"><a href="./sobre.html">Quem somos</a></li>
+                    <li class="nav-item"><a href="#">Blog</a></li>
+                    <li class="nav-item"><a href="#">Contatos</a></li>
+            </div>
+            <div class="social">
+                <a href="">
+                    <img class="social" src="./assets/FACEBOOK.png" alt="FACEBOOK" srcset="">
+                </a>
+                <a href="https://www.instagram.com/paulocantaru/" target="_blank">
+                    <img class="social" src="./assets/INSTAGRAM.png" alt="INSTAGRAM" srcset="">
+                </a>
+                <a href="https://www.linkedin.com/in/paulocantarutti/?originalSubdomain=br" target="_blank">
+                    <img class="social" src="./assets/LINKEDIN.png" alt="LINKEDIN" srcset="">
+                </a>
+            </div>
+
+            </ul>
+
+        </nav>
+        <div class="header-mobile">
+            <div><a href="#"><img class="logo" src="./assets/LOGO.png" alt="Logo LP terapeutas" srcset=""></a></div>
+
+            <div><img class="toggle" src="./assets/mobile.png" alt=""></div>
+
+        </div>
         <div class="header-container">
 
             <div><a href="#"><img class="logo" src="./assets/LOGO.png" alt="Logo LP terapeutas" srcset=""></a></div>
