--- a/index.html
+++ b/index.html
@@ -195,6 +195,10 @@
         <div class="arrow swiper-button-next">
             <img class="arrow-slide" src="./assets/SETA.png" alt="seta">
         </div>
+
+        <div class="arrow-prev swiper-button-prev">
+            <img class="arrow-slide" src="./assets/SETA.png" alt="seta">
+        </div>
         </div>
 
     </section>
@@ -223,10 +227,10 @@
 
     </section>
 
-    <section id="testimonials" class="reveal">
+    <section id="testimonials">
         <h1>Depoimentos</h1>
         <div class="testimonials-container">
-            <div class="testimonials swiper-container">
+            <div class="testimonials swiper-container-test">
                 <div class="swiper-wrapper-test">
                     <div class="testimonial swiper-slide">
                         <blockquote>
