--- a/index.html
+++ b/index.html
@@ -227,11 +227,16 @@
 
     </section>
 
-    <section id="testimonials">
-        <h1>Depoimentos</h1>
+    <section id="testimonials" class="reveal">
         <div class="testimonials-container">
+            <div class="main-title-container">
+                <h3 class="main-title">Depoimentos</h3>
+            </div>
             <div class="testimonials swiper-container-test">
-                <div class="swiper-wrapper-test">
+                <p>Aqui estão alguns depoimentos com resultados sólidos e extraordinários. Conheça mais sobre nosso
+                    trabalho
+                    e permita-se agora que os<br />resultados sejam em <strong> SUA VIDA.</strong></p>
+                <div class="swiper-wrapper">
                     <div class="testimonial swiper-slide">
                         <blockquote>
                             <div>
@@ -253,7 +258,18 @@
 
                         </blockquote>
                     </div>
-
+                    <!-- <div class="testimonial swiper-slide">
+                        <blockquote>
+                            <p>
+                                <span>&ldquo;</span>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae expedita praesentium
+                                molestias adipisci ex et porro
+                            </p>
+                            <cite>
+                                Franciele Fernanda
+                            </cite>
+                        </blockquote>
+                    </div> -->
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
@@ -261,34 +277,53 @@
     </section>
 
     <footer>
-        <div class="footer-msg">
-            <h1>Entre em contato: </h1>
-        </div>
-        <div class="footer-item">
-            <a href="https://api.whatsapp.com/send/?phone=5534998372915&text&type=phone_number&app_absent=0">
-                <img src="./assets/TELEFONE.png" alt="TELEFONE">
-            </a>
-            <span>
-                Whatsapp: (34)99837-2915
-            </span>
-            <span>
-                Horários: 8:00 - 20:00</span>
-        </div>
-        <div class="footer-item">
-            <a href="mailto:contato@lpterapeutas.com">
-                <img src="./assets/E-MAIL.png" alt="E-MAIL">
-            </a>
-            <span>
-                E-mail: contato@lpterapeutas.com
-            </span>
-        </div>
-        <div class="footer-item">
-            <span>Nossas Redes:</span>
 
-            <a href="https://www.instagram.com/paulocantaruttioficial" target="blank">Instagram
-                Paulo</a>
-            <a href="https://www.instagram.com/lauriene.reis_psic" target="blank">Instagram Lauriene</a>
+        <div class="contact">
+            <div class="footer-msg">
+                <h1>Entre em contato </h1>
+            </div>
+
+            <div class="container-all">
+                <div class="container center">
+                    <div class="card">
+                        <img src="./assets/TELEFONE.png" alt="TELEFONE">
+                        <hr />
+
+                        <a
+                            href="https://api.whatsapp.com/send/?phone=5534998372915&text&type=phone_number&app_absent=0">
+                            Whatsapp: (34)99837-2915 </a>
+                        <span>
+                            Horários: 8:00 - 20:00</span>
+
+                    </div>
+                </div>
+                <div class="container center">
+                    <div class="card">
+
+                        <img src="./assets/E-MAIL.png" alt="E-MAIL">
+                        </a>
+                        <hr />
+                        <span>
+                            <a href="mailto:contato@lpterapeutas.com">
+                                E-mail: contato@lpterapeutas.com
+                            </a>
+                        </span>
+                    </div>
+                </div>
+                <div class="container center">
+                    <div class="card">
+                        <img src="./assets/social.png" alt="social">
+                        <hr />
+                        <span>Nossas Redes:</span>
+
+                        <a href="https://www.instagram.com/paulocantaruttioficial" target="blank">Instagram
+                            Paulo</a>
+                        <a href="https://www.instagram.com/lauriene.reis_psic" target="blank">Instagram Lauriene</a>
+                    </div>
+                </div>
+            </div>
         </div>
+
     </footer>
 
 </body>
