--- a/sobre.html
+++ b/sobre.html
@@ -15,7 +15,7 @@
 
     <main id="main-about">
         <section class="about-01">
-            <div>
+            <div class="text">
                 <h1>Paulo Cantarutti</h1>
 
                 <p>Meu objetivo é ajudar meus clientes a alcançarem uma vida mais saudável e satisfatória, através de um
@@ -51,10 +51,18 @@
                     ✔ Extensão em Inteligência Emocional aplicada à família - IBC – Instituto Brasileiro de Coaching</p>
             </div>
 
+            <div class="img-container">
+                <img src="./assets/PAULO 2 SORRINDO.png" alt="Paulo">
+            </div>
         </section>
 
         <section class="about-02">
-            <div>
+
+            <div class="img-container">
+                <img src="./assets/LAURIENE 1.png" alt="lauriene">
+            </div>
+
+            <div class="text">
 
                 <h1>Lauriene Reis</h1>
                 <p>Sempre fui muito sensível às coisas abstratas, como arte, livros, música, ao sofrimento das pessoas
