--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="toggle-nav">
             <div class="menu">
                 <ul class="nav-container">
-                    <li class="nav-item"><a href="#">Home</a></li>
+                    <li class="nav-item"><a href="/">Home</a></li>
                     <li class="nav-item"><a
                             href="https://api.whatsapp.com/send/?phone=5534998372915&text&type=phone_number&app_absent=0"
                             target="_blank">Agendar
@@ -31,8 +31,8 @@
                     <li class="nav-item"><a href="#">Contatos</a></li>
             </div>
             <div class="social">
-                <a href="">
-                    <img class="social" src="./assets/FACEBOOK.png" alt="FACEBOOK" srcset="">
+                <a href="https://www.tiktok.com/@paulocantarutti" target="_blank">
+                    <img class="social" src="./assets/TIKTOK.png" alt="TIKTOK" srcset="">
                 </a>
                 <a href="https://www.instagram.com/paulocantaru/" target="_blank">
                     <img class="social" src="./assets/INSTAGRAM.png" alt="INSTAGRAM" srcset="">
@@ -46,17 +46,17 @@
 
         </nav>
         <div class="header-mobile">
-            <div><a href="#"><img class="logo" src="./assets/LOGO.png" alt="Logo LP terapeutas" srcset=""></a></div>
+            <div><a href="/"><img class="logo" src="./assets/LOGO.png" alt="Logo LP terapeutas" srcset=""></a></div>
 
             <div><img class="toggle" src="./assets/mobile.png" alt=""></div>
 
         </div>
         <div class="header-container">
 
-            <div><a href="#"><img class="logo" src="./assets/LOGO.png" alt="Logo LP terapeutas" srcset=""></a></div>
+            <div><a href="/"><img class="logo" src="./assets/LOGO.png" alt="Logo LP terapeutas" srcset=""></a></div>
             <nav>
                 <ul class="nav-container">
-                    <li class="nav-item"><a href="#">Home</a></li>
+                    <li class="nav-item"><a href="/">Home</a></li>
                     <li class="nav-item"><a
                             href="https://api.whatsapp.com/send/?phone=5534998372915&text&type=phone_number&app_absent=0"
                             target="_blank">Agendar
@@ -70,8 +70,8 @@
             </nav>
 
             <div>
-                <a href="">
-                    <img class="social" src="./assets/FACEBOOK.png" alt="FACEBOOK" srcset="">
+                <a href="https://www.tiktok.com/@paulocantarutti" target="_blank">
+                    <img class="social" src="./assets/TIKTOK.png" alt="TIKTOK" srcset="">
                 </a>
                 <a href="https://www.instagram.com/paulocantaru/" target="_blank">
                     <img class="social" src="./assets/INSTAGRAM.png" alt="INSTAGRAM" srcset="">
