--- a/index.html
+++ b/index.html
@@ -232,33 +232,45 @@
             <div class="main-title-container">
                 <h3 class="main-title">Depoimentos</h3>
             </div>
+            <p>Aqui estão alguns depoimentos com resultados sólidos e extraordinários. Conheça mais sobre nosso
+                trabalho
+                e permita-se agora que os<br />resultados sejam em <strong> SUA VIDA.</strong></p>
             <div class="testimonials swiper-container-test">
-                <p>Aqui estão alguns depoimentos com resultados sólidos e extraordinários. Conheça mais sobre nosso
-                    trabalho
-                    e permita-se agora que os<br />resultados sejam em <strong> SUA VIDA.</strong></p>
                 <div class="swiper-wrapper">
                     <div class="testimonial swiper-slide">
                         <blockquote>
                             <div>
                                 <video width="320" height="240" controls>
-                                    <source src="./assets/videos/ana.mp4" type="video/mp4">
+                                    <source src="./assets/videos/novo-01.mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
                             </div>
                         </blockquote>
                     </div>
-                    <div class="testimonial swiper-slide">
-                        <blockquote>
-                            <div>
-                                <video width="320" height="240" controls>
-                                    <source src="./assets/videos/carol.mp4" type="video/mp4">
-                                    Your browser does not support the video tag.
-                                </video>
-                            </div>
 
-                        </blockquote>
-                    </div>
-                    <!-- <div class="testimonial swiper-slide">
+                    <div class="swiper-wrapper">
+                        <div class="testimonial swiper-slide">
+                            <blockquote>
+                                <div>
+                                    <video width="320" height="240" controls>
+                                        <source src="./assets/videos/ana.mp4" type="video/mp4">
+                                        Your browser does not support the video tag.
+                                    </video>
+                                </div>
+                            </blockquote>
+                        </div>
+                        <div class="testimonial swiper-slide">
+                            <blockquote>
+                                <div>
+                                    <video width="320" height="240" controls>
+                                        <source src="./assets/videos/carol.mp4" type="video/mp4">
+                                        Your browser does not support the video tag.
+                                    </video>
+                                </div>
+
+                            </blockquote>
+                        </div>
+                        <!-- <div class="testimonial swiper-slide">
                         <blockquote>
                             <p>
                                 <span>&ldquo;</span>
@@ -270,10 +282,10 @@
                             </cite>
                         </blockquote>
                     </div> -->
+                    </div>
+                    <div class="swiper-pagination"></div>
                 </div>
-                <div class="swiper-pagination"></div>
             </div>
-        </div>
     </section>
 
     <footer>
