--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     </section>
 
     <section id="terapias">
-        
+
         <div class="terapias-text">
             <h1>O que pode ser tratado<br /> na terapia</h1>
 
@@ -231,62 +231,53 @@
     <section id="testimonials" class="reveal">
         <div class="testimonials-container">
             <div class="main-title-container">
-                <h3 class="main-title">Depoimentos</h3>
+                <h3>Depoimentos</h3>
+                <p>Aqui estão alguns depoimentos com resultados sólidos e extraordinários. Conheça mais sobre nosso
+                    trabalho
+                    e permita-se agora que os<br />resultados sejam em <strong> SUA VIDA.</strong></p>
             </div>
-            <p>Aqui estão alguns depoimentos com resultados sólidos e extraordinários. Conheça mais sobre nosso
-                trabalho
-                e permita-se agora que os<br />resultados sejam em <strong> SUA VIDA.</strong></p>
-            <div class="testimonials swiper-container-test">
+
+            <div class="swiper-container-test">
                 <div class="swiper-wrapper">
                     <div class="testimonial swiper-slide">
-                        <blockquote>
-                            <div>
-                                <video width="320" height="240" controls>
-                                    <source src="./assets/videos/novo-01.mp4" type="video/mp4">
-                                    Your browser does not support the video tag.
-                                </video>
-                            </div>
-                        </blockquote>
+
+                        <video width="320" height="240" controls>
+                            <source src="./assets/videos/novo-01.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+
                     </div>
 
-                    <div class="swiper-wrapper">
-                        <div class="testimonial swiper-slide">
-                            <blockquote>
-                                <div>
-                                    <video width="320" height="240" controls>
-                                        <source src="./assets/videos/ana.mp4" type="video/mp4">
-                                        Your browser does not support the video tag.
-                                    </video>
-                                </div>
-                            </blockquote>
-                        </div>
-                        <div class="testimonial swiper-slide">
-                            <blockquote>
-                                <div>
-                                    <video width="320" height="240" controls>
-                                        <source src="./assets/videos/carol.mp4" type="video/mp4">
-                                        Your browser does not support the video tag.
-                                    </video>
-                                </div>
+                    <div class="testimonial swiper-slide">
 
-                            </blockquote>
-                        </div>
-                        <!-- <div class="testimonial swiper-slide">
-                        <blockquote>
-                            <p>
-                                <span>&ldquo;</span>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae expedita praesentium
-                                molestias adipisci ex et porro
-                            </p>
-                            <cite>
-                                Franciele Fernanda
-                            </cite>
-                        </blockquote>
-                    </div> -->
+                        <video width="320" height="240" controls>
+                            <source src="./assets/videos/ana.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+
                     </div>
-                    <div class="swiper-pagination"></div>
+
+                    <div class="testimonial swiper-slide">
+
+                        <video width="320" height="240" controls>
+                            <source src="./assets/videos/carol.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+
+                    </div>
+                </div>
+
+
+                <div class="swiper-pagination"></div>
+                <div class="arrow swiper-button-next-test">
+                    <img class="arrow-slide" src="./assets/SETA.png" alt="seta">
+                </div>
+
+                <div class="arrow-prev swiper-button-prev-test">
+                    <img class="arrow-slide" src="./assets/SETA.png" alt="seta">
                 </div>
             </div>
+        </div>
     </section>
 
     <footer>
