--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
     </section>
 
-    <section id="testimonials" class="reveal">
+    <section id="testimonials">
         <div class="testimonials-container">
             <div class="main-title-container">
                 <h3>Depoimentos</h3>
@@ -241,7 +241,8 @@
                 <div class="swiper-wrapper">
                     <div class="testimonial swiper-slide">
 
-                        <video width="320" height="240" controls>
+                        <video width="320" height="240" controls
+                            style="background-color: #0d2a59; margin-right: 100px;">
                             <source src="./assets/videos/novo-01.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
@@ -250,7 +251,8 @@
 
                     <div class="testimonial swiper-slide">
 
-                        <video width="320" height="240" controls>
+                        <video width="320" height="240" controls
+                            style="background-color: #0d2a59; margin-right: 100px;">
                             <source src="./assets/videos/ana.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
@@ -259,7 +261,7 @@
 
                     <div class="testimonial swiper-slide">
 
-                        <video width="320" height="240" controls>
+                        <video width="320" height="240" controls style="background-color: #0d2a59;">
                             <source src="./assets/videos/carol.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
