--- a/sobre.html
+++ b/sobre.html
@@ -13,13 +13,85 @@
 
 <body>
 
+    <header>
+        <nav class="toggle-nav">
+            <div class="menu">
+                <ul class="nav-container">
+                    <li class="nav-item"><a href="/">Home</a></li>
+                    <li class="nav-item"><a
+                            href="https://api.whatsapp.com/send/?phone=5534998372915&text&type=phone_number&app_absent=0"
+                            target="_blank">Agendar
+                            Terapia</a></li>
+                    <li class="nav-item"><a href="/#terapias">Tratamentos</a></li>
+                    <li class="nav-item"><a href="/#depoimentos">Depoimentos</a></li>
+                    <li class="nav-item"><a href="./sobre.html">Quem somos</a></li>
+                    <li class="nav-item"><a href="#">Blog</a></li>
+                    <li class="nav-item"><a href="#">Contatos</a></li>
+            </div>
+            <div class="social">
+                <a href="https://www.tiktok.com/@paulocantarutti" target="_blank">
+                    <img class="social" src="./assets/TIKTOK.png" alt="TIKTOK" srcset="">
+                </a>
+                <a href="https://www.instagram.com/paulocantaru/" target="_blank">
+                    <img class="social" src="./assets/INSTAGRAM.png" alt="INSTAGRAM" srcset="">
+                </a>
+                <a href="https://www.linkedin.com/in/paulocantarutti/?originalSubdomain=br" target="_blank">
+                    <img class="social" src="./assets/LINKEDIN.png" alt="LINKEDIN" srcset="">
+                </a>
+            </div>
+
+            </ul>
+
+        </nav>
+        <div class="header-mobile">
+            <div><a href="/"><img class="logo" src="./assets/LOGO.png" alt="Logo LP terapeutas" srcset=""></a></div>
+
+            <div><img class="toggle" src="./assets/mobile.png" alt=""></div>
+
+        </div>
+        <div class="header-container">
+
+            <div><a href="/"><img class="logo" src="./assets/LOGO.png" alt="Logo LP terapeutas" srcset=""></a></div>
+            <nav>
+                <ul class="nav-container">
+                    <li class="nav-item"><a href="/">Home</a></li>
+                    <li class="nav-item"><a
+                            href="https://api.whatsapp.com/send/?phone=5534998372915&text&type=phone_number&app_absent=0"
+                            target="_blank">Agendar
+                            Terapia</a></li>
+                    <li class="nav-item"><a href="/#terapias">Tratamentos</a></li>
+                    <li class="nav-item"><a href="/#depoimentos">Depoimentos</a></li>
+                    <li class="nav-item"><a href="./sobre.html">Quem somos</a></li>
+                    <li class="nav-item"><a href="#">Blog</a></li>
+                    <li class="nav-item"><a href="#">Contatos</a></li>
+                </ul>
+            </nav>
+
+            <div>
+                <a href="https://www.tiktok.com/@paulocantarutti" target="_blank">
+                    <img class="social" src="./assets/TIKTOK.png" alt="TIKTOK" srcset="">
+                </a>
+                <a href="https://www.instagram.com/paulocantaru/" target="_blank">
+                    <img class="social" src="./assets/INSTAGRAM.png" alt="INSTAGRAM" srcset="">
+                </a>
+                <a href="https://www.linkedin.com/in/paulocantarutti/?originalSubdomain=br" target="_blank">
+                    <img class="social" src="./assets/LINKEDIN.png" alt="LINKEDIN" srcset="">
+                </a>
+            </div>
+
+        </div>
+
+
+    </header>
+
     <main id="main-about">
         <section class="about-01">
             <div class="text">
                 <h1>Paulo Cantarutti</h1>
 
                 <p>Meu objetivo é ajudar meus clientes a alcançarem uma vida mais saudável e satisfatória, através de um
-                    processo terapêutico individualizado e centrado no cliente. Utilizo metodologias comprovadas
+                    processo terapêutico individualizado e centrado no cliente.
+                    Utilizo metodologias comprovadas
                     cientificamente, baseada em estudos concretos e neurociência, que leva em consideração a
                     singularidade de cada pessoa e suas necessidades específicas. </p>
 
@@ -97,6 +169,55 @@
 
         </section>
     </main>
+    <footer>
+
+        <div class="contact">
+            <div class="footer-msg">
+                <h1>Entre em contato </h1>
+            </div>
+
+            <div class="container-all">
+                <div class="container center">
+                    <div class="card">
+                        <img src="./assets/TELEFONE.png" alt="TELEFONE">
+                        <hr />
+
+                        <a
+                            href="https://api.whatsapp.com/send/?phone=5534998372915&text&type=phone_number&app_absent=0">
+                            Whatsapp: (34)99837-2915 </a>
+                        <span>
+                            Horários: 8:00 - 20:00</span>
+
+                    </div>
+                </div>
+                <div class="container center">
+                    <div class="card">
+
+                        <img src="./assets/E-MAIL.png" alt="E-MAIL">
+                        </a>
+                        <hr />
+                        <span>
+                            <a href="mailto:contato@lpterapeutas.com">
+                                E-mail: contato@lpterapeutas.com
+                            </a>
+                        </span>
+                    </div>
+                </div>
+                <div class="container center">
+                    <div class="card">
+                        <img src="./assets/social.png" alt="social">
+                        <hr />
+                        <span>Nossas Redes:</span>
+
+                        <a href="https://www.instagram.com/paulocantaruttioficial" target="blank">Instagram
+                            Paulo</a>
+                        <a href="https://www.instagram.com/lauriene.reis_psic" target="blank">Instagram Lauriene</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </footer>
 
 </body>
 
